# maribox

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.md  skills-lock.json
.claude/: settings.local.json
.claude/skills/: maribox-serve.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: usage.md
docs/planning/: phase-10-testing.md  phase-2-config.md  phase-3-auth.md  phase-4-sandbox.md  phase-5-notebook.md  phase-6-agents.md  phase-7-cli.md  phase-8-mcp.md  phase-9-tui.md
src/maribox/: __init__.py  __main__.py  cli.py  exceptions.py
src/maribox/agents/: __init__.py  base.py  debug_agent.py  notebook_agent.py  orchestrator.py  profile.py  session_agent.py  ui_agent.py
src/maribox/auth/: __init__.py  manager.py
src/maribox/commands/: agent.py  auth.py  cell.py  config.py  debug.py  notebook_cmds.py  session.py  ui.py
src/maribox/config/: __init__.py  defaults.py  io.py  resolution.py  schema.py
tests/: conftest.py
tests/agents/: test_base.py  test_orchestrator.py  test_profile.py  test_tools.py
tests/auth/: test_manager.py
tests/commands/: __init__.py
tests/config/: __init__.py  test_io.py  test_schema.py
tests/integration/: test_integration.py
tests/mcp/: __init__.py  test_server.py  test_tools.py
tests/notebook/: __init__.py  test_cell.py  test_dag.py  test_export.py
tests/sandbox/: __init__.py  test_session.py
tests/security/: test_encryption.py  test_log_mask.py
tests/tui/: __init__.py  test_app.py  test_widgets.py
(+47 files in other folders)
