[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maribox"]

[project]
name = "maribox"
version = "0.1.0"
description = "Multi-session marimo notebook orchestrator with collaborative AI agents"
requires-python = ">=3.11"
dependencies = [
  "google-adk>=0.5",
  "litellm>=1.40",
  "typer>=0.12",
  "textual>=0.61",
  "marimo>=0.8",
  "cryptography>=42",
  "keyring>=25",
  "tomli-w>=1.0",
  "platformdirs>=4",
  "mcp>=1.0",
  "rich>=13",
  "argon2-cffi>=23.1",
  "httpx>=0.27",
  "zhipuai>=2.0",
]

[project.scripts]
maribox = "maribox.cli:app"

[project.entry-points."mcp.servers"]
maribox = "maribox.mcp:server"

[dependency-groups]
dev = [
  "ruff>=0.8",
  "mypy>=1.13",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6",
]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
